Fixes minimal icon jump when opening share-dropdown

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_share-dropdown.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_share-dropdown.scss
@@ -19,7 +19,7 @@ won-share-dropdown {
     @include fixed-square($postIconSizeMobile);
     //padding-left: 0.5rem;
     position: relative;
-    right: -0.35rem;
+    right: -0.34rem;
     /*the correct right value would be "calc(-0.5rem - #{$thinBorderWidth});"
     however, it is not displayed correct so we assume the right value with -0.6rem*/
     float: right;
